# VostokTelecom_Mobile_backend

./: .gitignore  README.md  acquiring.py  app.py  pyproject.toml  requisites.json  requisites.txt  schemas.py  service.py  tasks.py
db/: app_db.py  billing_db.py
