[tool.poetry]
name = "vostoktelekom"
version = "0.1.0"
description = ""
authors = ["CHRNV <chernov.sib@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
python-jose = "^3.3.0"
passlib = "^1.7.4"
aiosqlite = "^0.20.0"
aiomysql = "^0.2.0"
python-dotenv = "^1.0.1"
aiohttp = "^3.9.3"
gunicorn = "^21.2.0"
apscheduler = "^3.10.4"
cryptography = "^42.0.5"
gspread = "^6.1.0"
oauth2client = "^4.1.3"
aiofiles = "^23.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
